<resources>
    <string name="log_canary_display_activity_label">logs</string>
    <string name="log_canary_title">Logs in %s</string>
    <string name="log_canary_filter">输入想要过滤的关键字</string>
    <string name="log_canary_info_verbose">Verbose</string>
    <string name="log_canary_info_debug">Debug</string>
    <string name="log_canary_info_info">Info</string>
    <string name="log_canary_info_warn">Warn</string>
    <string name="log_canary_info_error">Error</string>
</resources>
